--- a/index.html
+++ b/index.html
@@ -1,37 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Coca Cola</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Coca Cola</title>
     <link
       rel="stylesheet"
       href="https://api.fontshare.com/css?f[]=satoshi@400,700&display=swap"
     />
- <link
-    href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
-    rel="stylesheet"
-/>
- <link rel="stylesheet" href="style.css">
-</head>
-<body>
- <main>
-  <nav>
-   <h3><i class="ri-menu-line"></i>menu</h3>
-   <div id="nav-prt2">
-    <h4>Drinks</h4>
-    <h4>categories</h4>
-    <h4>buy franchise</h4>
-    <div class="line"></div>
-    <img src="./images/coca-cola.webp" alt="Coca Cola Logo">
-    <div class="line"></div>
-    <h4>stores</h4>
-    <h4>conatct</h4>
-    <h4>our story</h4>
-   </div>
-   <i class="ri-search-line"></i>
-  </nav>
-  
- </main>
-</body>
+    <link
+      href="https://cdn.jsdelivr.net/npm/remixicon@4.5.0/fonts/remixicon.css"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <main>
+      <nav>
+        <h3><i class="ri-menu-line"></i>menu</h3>
+        <div id="nav-prt2">
+          <h4>Drinks</h4>
+          <h4>categories</h4>
+          <h4>buy franchise</h4>
+          <div class="line"></div>
+          <img src="./images/coca-cola.webp" alt="Coca Cola Logo" />
+          <div class="line"></div>
+          <h4>stores</h4>
+          <h4>conatct</h4>
+          <h4>our story</h4>
+        </div>
+        <i class="ri-search-line"></i>
+      </nav>
+      <div id="content">
+        <div class="left">
+          <h1>Your favourite <span>coke</span> just got reinvented.</h1>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+            Necessitatibus, modi sapiente. Cumque qui totam illo!
+          </p>
+          <div class="btn-icon">
+            <button class="btn">
+              <i class="ri-shopping-bag-3-line"></i>taste now
+            </button>
+            <i class="ri-heart-line"></i>
+          </div>
+        </div>
+        <div class="center">
+          <div id="center-bg"></div>
+        </div>
+        <div class="right">
+          <div id="right-elems">
+            <div id="elem1">
+              <h2>Descriptions</h2>
+              <i class="ri-add-line"></i>
+            </div>
+            <div id="elem1">
+              <h2>Nutritents</h2>
+              <i class="ri-add-line"></i>
+            </div>
+            <div id="elem2">
+              <h2>Ingredients</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Molestias eveniet sequi numquam hic. Recusandae maxime, velit
+                quis totam quas tenetur?
+              </p>
+            </div>
+          </div>
+        </div>
+        <img src="./images/bottle.webp" alt="Coca Cola Glass Bottle" />
+      </div>
+    </main>
+  </body>
 </html>
